# 50.035-Plant-Disease-Detection

./: README.md
notebooks/: Data_preparation.ipynb  ModelTrainingVis.ipynb  pyproject.toml
notebooks/Image Classification/: EfficientNetB0.ipynb  InceptionV3.ipynb  README.md  SqueezeNet.ipynb  Various_Models.ipynb
notebooks/Image Segmentation/: DeepLabV3MobileNetSegmentation.ipynb  README.md  Various_Models.ipynb
user_interface/: README.md  app.py  classification.py  map_diseased_areas.py  process_image.py  requirements.txt
