[project]
name = "notebooks"
version = "0.1.0"
description = "Notebook stuff"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.4.0",
    "matplotlib>=3.9.3",
    "pillow>=11.0.0",
    "polars>=1.14.0",
    "rich>=13.9.4",
    "segmentation-models-pytorch>=0.3.4",
    "torch>=2.5.1",
    "torchmetrics>=1.6.0",
    "torchvision>=0.20.1",
    "tqdm>=4.67.0",
]

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "jupyter>=1.1.1",
]